tests/toy/neg/001454_mutation.toylang
program a = { var a : 0 bool; } .
